--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,10 @@ jobs:
   dev-flow:
     runs-on: ubuntu-latest
     container:
-      image: 'docker://gambe94/sfdx:1.0.0'
-        credentials:
-          username: 'gambe94'
-          password: {{secrets.DOCKER_TOKEN}}
+      image: docker://gambe94/sfdx:1.0.0
+      credentials:
+        username: 'gambe94'
+        password: {{secrets.DOCKER_TOKEN}}
 
     steps:
       - name: Checkout
