--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,9 +23,14 @@ jobs:
           whoami
           sfdx --version
           sfdx plugins
-          sfdx force:auth:jwt:grant --clientid $PROD_CONSUMERKEY --jwtkeyfile ./certificate/server.key --username $PROD_USERNAME --setdefaultdevhubusername -a HubOrg
+          sfdx force:auth:jwt:grant --clientid $PROD_CONSUMERKEY \
+              --jwtkeyfile ./certificate/server.key \
+              --username $PROD_USERNAME \
+              --setdefaultdevhubusername \
+              -a $PROD_ALIAS
         env:
           PROD_CONSUMERKEY: ${{ secrets.PROD_CONSUMERKEY }}
           PROD_USERNAME: ${{ secrets.PROD_USERNAME }}
+          PROD_ALIAS: 'EburyHub'
 
 
