--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     container:
       image: docker://gambe94/sfdx:2.0.0
       credentials:
-        username: 'gambe94'
+        username: "gambe94"
         password: ${{ secrets.DOCKER_TOKEN }}
 
     steps:
@@ -28,36 +28,36 @@ jobs:
 
       - name: Create scratch Org
         run: |
-               whoami
-               sfdx --version
-               sfdx plugins
-          #          sfdx force:auth:jwt:grant --clientid $PROD_CONSUMERKEY \
-          #              --jwtkeyfile ./certificate/server.key \
-          #              --username $PROD_USERNAME \
-          #              --setdefaultdevhubusername \
-          #              --setalias=$PROD_ALIAS
-          #
-          #          sfdx force:org:create --setdefaultusername --definitionfile=config/project-scratch-def.json \
-          #            --durationdays=2  --setalias=GaborSC
-          #
-          #          sfdx force:user:password:generate --targetusername GaborSC
-          #
-          #          sfdx force:org:display --targetusername GaborSC --verbose --json | \
-          #            jq '{username: .result.username, password: .result.password, instanceUrl: .result.instanceUrl}' > cred.json
-          #
-          #          sfdx force:source:push -f
-               
-               sfdx force:auth:jwt:grant --clientid $PROD_CONSUMERKEY \
-               --jwtkeyfile ./certificate/server.key \
-               --username test-wreywwy0nmvn@example.com \
-               --instanceurl=https://power-page-8078-dev-ed.my.salesforce.com \
-               --setdefaultdevhubusername \
-               --setalias=GaborSC
+          whoami
+          sfdx --version
+          sfdx plugins
+               # sfdx force:auth:jwt:grant --clientid $PROD_CONSUMERKEY \
+               #     --jwtkeyfile ./certificate/server.key \
+               #     --username $PROD_USERNAME \
+               #     --setdefaultdevhubusername \
+               #     --setalias=$PROD_ALIAS
+
+               # sfdx force:org:create --setdefaultusername --definitionfile=config/project-scratch-def.json \
+               #   --durationdays=2  --setalias=GaborSC
+
+               # sfdx force:user:password:generate --targetusername GaborSC
+
+               # sfdx force:org:display --targetusername GaborSC --verbose --json | \
+               #   jq '{username: .result.username, password: .result.password, instanceUrl: .result.instanceUrl}' > cred.json
+
+               # sfdx force:source:push -f
+
+          sfdx force:auth:jwt:grant --clientid $PROD_CONSUMERKEY \
+          --jwtkeyfile ./certificate/server.key \
+          --username test-wreywwy0nmvn@example.com \
+          --instanceurl=https://power-page-8078-dev-ed.my.salesforce.com \
+          --setdefaultdevhubusername \
+          --setalias=GaborSC
 
         env:
           PROD_CONSUMERKEY: ${{ secrets.PROD_CONSUMERKEY }}
           PROD_USERNAME: ${{ secrets.PROD_USERNAME }}
-          PROD_ALIAS: 'EburyHub'
+          PROD_ALIAS: "EburyHub"
       - name: Archive credentials
         uses: actions/upload-artifact@v3
         with:
@@ -75,6 +75,3 @@ jobs:
         with:
           name: testResult
           path: testResult/*junit.xml
-
-
-
