--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,9 @@ jobs:
           --setdefaultdevhubusername \
           --setalias=GaborSC
 
+           sfdx force:org:display --targetusername GaborSC --verbose --json | \
+                 jq '{username: .result.username, password: .result.password, instanceUrl: .result.instanceUrl}' > cred.json
+
         env:
           PROD_CONSUMERKEY: ${{ secrets.PROD_CONSUMERKEY }}
           PROD_USERNAME: ${{ secrets.PROD_USERNAME }}
