--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,13 +18,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - uses: actions/download-artifact@v3
-        with:
-          name: scratch-cred
-      - name: Debug creds
-        run: |
-          ls -la
-          cat creds.json
+      # - uses: actions/download-artifact@v3
+      #   with:
+      #     name: scratch-cred
+      # - name: Debug creds
+      #   run: |
+      #     ls -la
+      #     cat creds.json
 
       - name: Create scratch Org
         run: |
