--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,14 +17,17 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
+      - uses: actions/cache@v3
+        with:
+          path: |
+            creds.json
+          key: ${{ runner.os }}-${{ hashFiles('creds.json') }}
       # - uses: actions/download-artifact@v3
       #   with:
       #     name: scratch-cred
-      # - name: Debug creds
-      #   run: |
-      #     ls -la
-      #     cat creds.json
+      - name: Debug creds
+        run: |
+          ls -la
 
       - name: Create scratch Org
         run: |
