--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,11 +17,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - uses: actions/cache@v3
+      - name: Cache scratchOrg cred
+        id: cache_scratchOrg_cred
+        uses: actions/cache@v3
         with:
           path: |
             cred.json
-          key: ${{ github.ref }}-${{ hashFiles('creds.json') }}
+          key: ${{ github.ref }}
       # - uses: actions/download-artifact@v3
       #   with:
       #     name: scratch-cred
@@ -38,6 +40,7 @@ jobs:
 
 
       - name: Create scratch Org
+        if: steps.cache_scratchOrg_cred.outputs.cache-hit != 'true'
         run: |
           whoami
           sfdx --version
@@ -79,6 +82,24 @@ jobs:
         with:
           name: scratch-cred
           path: cred.json
+
+      - name: Login scratch Org
+        if: steps.cache_scratchOrg_cred.outputs.cache-hit != 'true'
+        run: |
+          sfdx force:auth:jwt:grant --clientid $PROD_CONSUMERKEY \
+          --jwtkeyfile ./certificate/server.key \
+          --username test-wreywwy0nmvn@example.com \
+          --instanceurl=https://power-page-8078-dev-ed.my.salesforce.com \
+          --setdefaultusername \
+          --setalias=GaborSC
+          
+          sfdx force:source:push -f -u GaborSC
+        env:
+          PROD_CONSUMERKEY: ${{ secrets.PROD_CONSUMERKEY }}
+          PROD_USERNAME: ${{ secrets.PROD_USERNAME }}
+          PROD_ALIAS: "EburyHub"
+
+
       - name: Run tests
         run: |
           sfdx force:apex:test:run --codecoverage --outputdir=testResult \
@@ -90,9 +111,32 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: testResult
-          path: testResult/*junit.xml
+          path: |
+            testResult/*junit.xml
+            testResult/test-result-*-codecoverage.json
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v3
         if: always() # always run even if the previous step fails
         with:
           report_paths: 'testResult/*junit.xml'
+
+
+      - name: Code Coverage Report
+        uses: irongut/CodeCoverageSummary@v1.3.0
+        with:
+          filename: testResult/test-result-*-codecoverage.json
+          badge: true
+          fail_below_min: true
+          format: markdown
+          hide_branch_rate: false
+          hide_complexity: true
+          indicators: true
+          output: both
+          thresholds: '60 80'
+
+      - name: Add Coverage PR Comment
+        uses: marocchino/sticky-pull-request-comment@v2
+        if: github.event_name == 'pull_request'
+        with:
+          recreate: true
+          path: code-coverage-results.md
