--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,7 +84,7 @@ jobs:
           path: cred.json
 
       - name: Login scratch Org
-        if: steps.cache_scratchOrg_cred.outputs.cache-hit != 'true'
+        if: steps.cache_scratchOrg_cred.outputs.cache-hit == 'true'
         run: |
           sfdx force:auth:jwt:grant --clientid $PROD_CONSUMERKEY \
           --jwtkeyfile ./certificate/server.key \
