--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,7 @@ jobs:
       - name: Create scratch Org
         if: steps.cache_scratchOrg_cred.outputs.cache-hit != 'true'
         run: |
+          export HOME=/root
           whoami
           sfdx --version
           sfdx plugins
@@ -86,6 +87,10 @@ jobs:
       - name: Login scratch Org
         if: steps.cache_scratchOrg_cred.outputs.cache-hit == 'true'
         run: |
+          export HOME=/root
+          whoami
+          sfdx --version
+          sfdx plugins
           sfdx force:auth:jwt:grant --clientid $PROD_CONSUMERKEY \
           --jwtkeyfile ./certificate/server.key \
           --username test-wreywwy0nmvn@example.com \
@@ -119,6 +124,4 @@ jobs:
         if: always() # always run even if the previous step fails
         with:
           report_paths: 'testResult/*junit.xml'
-
-
 
