--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: docker://gambe94/sfdx:2.0.0
+      options: --user root
       credentials:
         username: "gambe94"
         password: ${{ secrets.DOCKER_TOKEN }}
