--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,10 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: docker://gambe94/sfdx:2.0.0
-      options: --user root
       credentials:
         username: "gambe94"
         password: ${{ secrets.DOCKER_TOKEN }}
+      volumes:
+        - ${{ github.workspace }}/root/.local/share:/github/home/root/.local/share
 
     steps:
       - name: Checkout
