--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Debug creds
         run: |
           ls -la
-          ls $HOME/.local/share/sfdx/node_modules/ -la
+          ls ${{ github.workspace }}/root/.local/share -la
           
 
       - name: Dump GitHub context
