--- a/.github/workflows/dev-flow.yml
+++ b/.github/workflows/dev-flow.yml
@@ -31,10 +31,6 @@ jobs:
         username: "gambe94"
         password: ${{ secrets.DOCKER_TOKEN }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
       - run: |
           echo "Hello form create scratch"
           ls -la
@@ -47,6 +43,10 @@ jobs:
       credentials:
         username: "gambe94"
         password: ${{ secrets.DOCKER_TOKEN }}
+    steps:
+      - run: |
+          echo "Hello form run test"
+          ls -la
 
   PMD:
     runs-on: ubuntu-latest
@@ -55,6 +55,10 @@ jobs:
       credentials:
         username: "gambe94"
         password: ${{ secrets.DOCKER_TOKEN }}
+    steps:
+      - run: |
+          echo "Hello form PMD"
+          ls -la
 
   ESLint:
     runs-on: ubuntu-latest
