--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,8 +116,9 @@ jobs:
         if: steps.cache_scratchOrg_cred.outputs.cache-hit == 'true'
         run: |
           sfdx plugins
+          echo ${{ secrets.PORD_JWT_KEY }} > mykey.key
           sfdx force:auth:jwt:grant --clientid $PROD_CONSUMERKEY \
-          --jwtkeyfile ${{ secrets.PORD_JWT_KEY }} \
+          --jwtkeyfile mykey.key \
           --username test-wreywwy0nmvn@example.com \
           --instanceurl=https://power-page-8078-dev-ed.my.salesforce.com \
           --setdefaultusername \
