--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,9 +89,9 @@ jobs:
                #   jq '{username: .result.username, password: .result.password, instanceUrl: .result.instanceUrl}' > cred.json
 
                # sfdx force:source:push -f
-
+          echo $PORD_JWT_KEY_BASE64 | base64 --decode > mykey.key
           sfdx force:auth:jwt:grant --clientid $PROD_CONSUMERKEY \
-          --jwtkeyfile $.PORD_JWT_KEY \
+          --jwtkeyfile mykey.key \
           --username test-wreywwy0nmvn@example.com \
           --instanceurl=https://power-page-8078-dev-ed.my.salesforce.com \
           --setdefaultusername \
@@ -106,7 +106,7 @@ jobs:
           PROD_CONSUMERKEY: ${{ secrets.PROD_CONSUMERKEY }}
           PROD_USERNAME: ${{ secrets.PROD_USERNAME }}
           PROD_ALIAS: "EburyHub"
-          PORD_JWT_KEY: ${{ secrets.PORD_JWT_KEY }}
+          PORD_JWT_KEY_BASE64: ${{ secrets.PORD_JWT_KEY }}
 
       - name: Archive credentials
         uses: actions/upload-artifact@v3
@@ -118,10 +118,10 @@ jobs:
         if: steps.cache_scratchOrg_cred.outputs.cache-hit == 'true'
         run: |
           sfdx plugins
-          echo $PORD_JWT_KEY} > mykey.key
-          cat mykey.key
+          echo $PORD_JWT_KEY_BASE64 | base64 --decode > mykey.key
+          
           sfdx force:auth:jwt:grant --clientid $PROD_CONSUMERKEY \
-          --jwtkeyfile ./mykey.key \
+          --jwtkeyfile mykey.key \
           --username test-wreywwy0nmvn@example.com \
           --instanceurl=https://power-page-8078-dev-ed.my.salesforce.com \
           --setdefaultusername \
@@ -132,7 +132,7 @@ jobs:
           PROD_CONSUMERKEY: ${{ secrets.PROD_CONSUMERKEY }}
           PROD_USERNAME: ${{ secrets.PROD_USERNAME }}
           PROD_ALIAS: "EburyHub"
-          PORD_JWT_KEY: ${{ secrets.PORD_JWT_KEY }}
+          PORD_JWT_KEY_BASE64: ${{ secrets.PORD_JWT_KEY }}
 
       - name: Generate dif
         run: |
