--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,10 @@ jobs:
     runs-on: ubuntu-latest
     if: needs.init.steps.cache_scratchOrg_cred.outputs.cache-hit != 'true'
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+
       - name: Create scratch Org
         if: steps.cache_scratchOrg_cred.outputs.cache-hit != 'true'
         uses: ./.github/workflows/createScratchOrg
