--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
     uses: gambe94/sfdxAction/.github/workflows/createScratchOrg.yml@main
     with:
       sc_name: ${{ github.ref }}
-      sc_duration: 2
+      sc_duration: '2'
 
 
 
